--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,9 +47,9 @@ body {
 } */
 
 div.btn a {
-    text-decoration: none;
-    background-color: var(--hili-1);
-    padding: 10%;
+    text-decoration: none
+    background-color: var(--hili-1)
+    padding: 10%
 }
 
 
