--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 /* ICON SIZES END */
 :root {
   --bg-color: rgb(16, 0, 72);
-  --text-color: aqua;
+  --text-color: white;
   --hili-1: rgb(149, 191, 11);
   --hili-1-dark: rgb(226, 128, 36);
 }
@@ -76,7 +76,7 @@ header {
           transform: none;
 }
 .btn a:hover,
-.btn a:hover:focus {
+.btn a:focus:hover {
   -webkit-box-shadow: 0.6em 0.6em var(--hili-1-dark);
           box-shadow: 0.6em 0.6em var(--hili-1-dark);
   -webkit-transform: translate(-0.2em, -0.2em);
